fixed overlaping text for small view port

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -41,12 +41,23 @@ img{
 	color:#89ae72;	
 }
 
+
+
+/*@media screen and (max-width: 600px) {
+    .name {
+        font-size: 5px;
+    }
+}*/
+
 .sci-Name{
 	font-style: italic;
 	font-size: .7em;
 	white-space: nowrap;
 	color:#89ae72;
 }
+
+
+
 
 #popup{
 	height: 80%;
@@ -171,6 +182,8 @@ font-size:2em;
 	font-size: 1.5em;
 }
 
+
+
 /*#triangle-right {
 	width: 0;
 	height: 0;
@@ -217,6 +230,15 @@ p.info{
 
 #testfoo{
 	color:red;
+}
+
+@media screen and (max-width: 337px) {
+   .sci-Name {
+        font-size: 6px;
+    }
+    .name{
+    	font-size: 7.5px;
+    }
 }
 
 
